# phoebe

./: .gitignore  .gitmodules  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  Gemfile  INSTALL  INSTALL.md  LICENSE  Makefile  README.md  README_DEVELOPERS  _config.yml  contact.md  contributors.txt  index.html  index.md  news.md  team.md  timing.md
.github/workflows/: buildandtest.yml  mac_build.yaml  push_buildandtest.yml
_layouts/: default.html  post.html  template.html
_posts/: 2020-12-17-first-post.md  2021-12-1-arxiv.md  2021-12-8-v1-release.md
doc/: .gitignore  Doxyfile  elphInterpolation.tex  fourierInterpolation.tex
doc/doc_pages/: Doxygen.md  GettingStarted.md  InputFiles.md  Installation.md  Introduction.md  Overview.md  Postprocessing.md  Running.md  Theory.md  Tutorial.md  UnitTesting.md  Units.md  developerOverview.md  elphInterpolation.md  fourierInterpolation.md  phononBTE.md  specificHeat.md  statistics.md  wannierHarmonic.md
doc/doxygen/: Doxyfile
doc/html/: _matrix_8h.html  _matrix_8h__incl.map  _matrix_8h__incl.md5  _matrix_8h_source.html  _start.html  _theory.html  animal_8hpp_source.html  annotated.html  annotated_dup.js  class_a-members.html  class_a.html  class_a.js  class_a__coll__graph.md5  class_a__inherit__graph.map  class_a__inherit__graph.md5  class_b-members.html  class_b.html  class_b.js  class_b__coll__graph.map  class_b__coll__graph.md5  class_b__inherit__graph.map  class_b__inherit__graph.md5  class_c-members.html  class_c.html  class_c.js  class_c__coll__graph.map  class_c__coll__graph.md5  class_c__inherit__graph.map  class_c__inherit__graph.md5  class_context-members.html  class_context.html  class_context.js  class_d-members.html  class_d.html  class_d.js  class_d__coll__graph.map  class_d__coll__graph.md5  class_d__inherit__graph.map  class_d__inherit__graph.md5  class_error-members.html  (+116 more)
doc/images/: TransportCode.drawio  TransportCode.html
doc/latex/: _matrix_8h.tex  _matrix_8h__incl.md5  _start.tex  _theory.tex  annotated.tex  class_a.tex  class_a__coll__graph.md5  class_a__inherit__graph.md5  class_b.tex  class_b__coll__graph.md5  class_b__inherit__graph.md5  class_c.tex  class_c__coll__graph.md5  class_c__inherit__graph.md5  class_context.tex  class_d.tex  class_d__coll__graph.md5  class_d__inherit__graph.md5  class_error.tex  class_matrix.tex  class_penna_1_1_animal.tex  class_penna_1_1_genome.tex  class_phonon_h0.tex  class_q_e_parser.tex  class_transport_app.tex  class_warning.tex  classpt_1_1_periodic_table.tex  classpt_1_1_periodic_table__coll__graph.md5  files.tex  hierarchy.tex  index.tex  namespace_penna.tex  namespaces.tex  refman.tex  struct_element.tex  struct_file_format_not_recognized.tex  struct_file_format_not_recognized__coll__graph.md5  struct_parameter_not_found.tex  struct_parameter_not_found__coll__graph.md5
doc/source/: conf.py  index.rst  introduction.rst
doc/sphinx/: .gitignore
doc/test_src/: CMakeLists.txt  animal-test.cpp  animal.cpp  animal.hpp  genome-test.cpp  genome.cpp  genome.hpp
example/: .gitignore
example/Cu/: Cu.pbe-dn-rrkjus_psl.1.0.0.UPF  README.md
example/GaN/: electronTransport.in  electronWannierBands.in  input.in  qeToPhoebeWannier.in
example/SiC/: FORCE_CONSTANTS_3RD  input.in  job.sh  sic.fc
example/Silicon-el/: electronFourierDos.in  electronLifetimes.in  electronWannierBands.in  electronWannierDos.in  electronWannierTransport.in  elphMatrixElements.in  qe2Epa.in  qeToPhoebeWannier.in
example/Silicon-epa/: electronFourierBands.in  electronFourierDos.in  epaTransport.in  qe2Epa.in  qeToPhoebeEPA.in
example/Silicon-ph/: README  phononBands.in  phononDos.in  (+2 more)
include/: Blacs.h  Blas.h  Eigen  Matrix.h  PMatrix.h  active_bandstructure.h  active_points.h  app.h  bands_app.h  bandstructure.h  basevector_bte.h  constants.h  context.h  crystal.h  delta_function.h  dos_app.h  drift.h  el_scattering.h  electron_h0_fourier.h  electron_h0_spline.h  electron_h0_wannier.h  electron_wannier_transport_app.h  element.h  epa_parser.h  epa_scattering.h  exceptions.h  full_points.h  harmonic.h  helper_3rd_state.h  helper_el_scattering.h  ifc3_parser.h  interaction_3ph.h  interaction_elph.h  interaction_epa.h  io.h  irreducible_points.h  kpoints.h  mpiController.h  mpiHelper.h  observable.h  (+28 more)
lib/: .gitignore  CMakeLists.txt  Makefile  newCMakeLists.txt
scripts/: bands.py  conductivity.py  convertHDF5.py  dos.py  el_tau.py  ph_conductivity.py  tau.py  tau2.py  tau_path.py
src/: active_bandstructure.cpp  active_bandstructure.h  bandstructure.cpp  bandstructure.h  common_kokkos.cpp  common_kokkos.h  context.cpp  context.h  crystal.cpp  crystal.h  delta_function.cpp  delta_function.h  eigen.h  exceptions.cpp  exceptions.h  io.cpp  io.h  kpoints.cpp  kpoints.h  main.cpp  main.h.in  occupations.cpp  occupations.h  particle.cpp  particle.h  points.cpp  points.h  pugixml.cpp  state.cpp  state.h  statistics.cpp  statistics.h  statistics_sweep.cpp  statistics_sweep.h  transport_app.cpp  transport_app.h  utilities.cpp  utilities.h
stylesheets/: pictureGrid.css  stylesheet.css  topbar.css
test/: .gitignore  CMakeLists.txt  PMatrix.cpp  activeBandStructureTest.cpp  activeBandStructureTest2.cpp  band_structure_test.cpp  crystalTest.cpp  deltaTest.cpp  dosTest.cpp  example.cpp  example.h  interaction3phTest.cpp  interactionElPhTest.cpp  interactionIsotopeTest.cpp  irrPointsTest.cpp  kokkos.cpp  kokkosHamiltonians.cpp  magneticUnfoldingTest.cpp  mpi.cpp  pointsTest.cpp  test.cpp  test_utils.h  velocityTest.cpp
test/data/: .gitignore  444_silicon.fc  FORCE_CONSTANTS_3RD  activeBands.in  activeBandsEnWindow.in  activeBandsPopWindow.in  reference3Ph000  reference3Ph000_p3py  reference3Ph210  si.eig  si.nnkp  si_u.mat  si_u_dis.mat  silicon.fc  silicon.phoebe.elph.hdf5
test/data/phono3py/: disp_fc3.yaml  fc2.hdf5  fc3.hdf5  phono3py_disp.yaml
test/interaction3ph/: QEspresso.fc  interaction3phTest.cpp  linewidth3phTest.cpp  referenceCMins10-210-200  referenceCmins000
test/interactionIsotope/: interactionIsotopeTest.cpp
utilities/: patch-qe-6.6.txt  phoebe_qe_patch.diff
(+400 files in other folders)
